--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </ul>
                 <p class="sobre__texto">Desenvolvemos aplicativos para todas as plataformas</p>
             </div>
-            <!-- <img src="img/sobre-apeperia.png" alt="Sobre a Apeperia" class="sobre__imagem"> -->
+            <img src="img/sobre-apeperia.png" alt="Sobre a Apeperia" class="sobre__imagem">
         </section>
         <!-- ---------------------------------------------------------------- -->
 
@@ -158,19 +158,23 @@
         <!-- ---------------------------------------------------------------- -->
         <section class="institucional container">
             <h2 class="institucional__titulo">Institucional</h2>
-            <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
-            <address class="institucional__endereco">
-                Rua Vergueiro, 3185<br>
-                Vila Mariana, São Paulo
-                <article class="institucional__contato">
-                    <p>
-                        <a class="institucional__contato-telefone" href="tel:+5511989566433">(11) 5571-2751</a> ou
-                        <a class="institucional__contato-email"
-                            href="mailto:contato@apeperia.com">contato@apeperia.com</a>
-                    </p>
-                </article>
-            </address>
-            <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
+            <div class="institucional__conteudo">
+                <div class="institucional__informacoes">
+                    <p class="institucional__descricao">Um pouco mais sobre a Apeperia</p>
+                    <address class="institucional__endereco">
+                        Rua Vergueiro, 3185<br>
+                        Vila Mariana, São Paulo
+                        <article class="institucional__contato">
+                            <p>
+                                <a class="institucional__contato-telefone" href="tel:+5511989566433">(11) 5571-2751</a> ou
+                                <a class="institucional__contato-email"
+                                    href="mailto:contato@apeperia.com">contato@apeperia.com</a>
+                            </p>
+                        </article>
+                    </address>
+                </div>
+                <video src="img/formacao-java.mp4" class="institucional__video" controls></video>
+            </div>
         </section>
     </main>
     <!-- ---------------------------------------------------------------- -->
